# opengl-demos

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProj.bat  README.md  openGL.sln  openGL.vcxproj  openGL.vcxproj.filters  premake5.lua
ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
ImGui/src/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
objExpander/: main.cpp  objExpander.vcxproj
openGL/: imgui.ini  openGL.vcxproj  openGL.vcxproj.filters
openGL/src/: Application.cpp  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
res/: openGL.rc
res/Shaders/: Blastoise.shader  BlinnPhong.shader  Cube.shader  CubeMap.shader  Framebuf.shader  QuadInstance.shader  Rocks.shader  Simple.shader  glFragCoord.shader  glPointSize.shader  lighting.shader
res/shaders/: Blastoise.shader  BlinnPhong.shader  Explode.shader  Nidoqueen.shader  NormMap.shader  Simple.shader  SkyBox.shader  Triangle.shader  glFragCoord.shader  glFrontFacing.shader  lamp.shader  lamp2.shader
src/: Application.cpp  Camera.cpp  Camera.h  ImGuiBuild.cpp  IndexBuffer.cpp  IndexBuffer.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  callback.h  debug.h
src/Utils/: CubeMap.cpp  CubeMap.h  UniformBuffer.cpp
src/architecture/: DemoManager.cpp  DemoManager.h  test_manager.cpp
src/demos/: test.h  testAdvGLSL.cpp  testAdvGLSL.h  testAdvLight.cpp  testAdvLight.h  testBloom.cpp  testBloom.h  testCubeMap.cpp  testCubeMap.h  testDeferred.cpp  testDeferred.h  testDepthTest.cpp  testDepthTest.h  testFrameBuf.cpp  testFrameBuf.h  testInstancing.cpp  testInstancing.h  testLighting.cpp  testLighting.h  testNormalMap.cpp  testNormalMap.h  testParallaxMap.cpp  testParallaxMap.h  testPlanets.cpp  testPlanets.h  testPointShadow.cpp  testPointShadow.h  testSSAO.cpp  testSSAO.h  testShadows.cpp  testShadows.h  testTriangle.cpp  (+1 more)
stb_image/: stb_image.vcxproj  stb_image.vcxproj.filters
(+257 files in other folders)
